base/src/test/resources/failure/cubical/face-mismatch.aya.txt
In file $FILE:15:2 ->

  13 | 
  14 | def counter (A : Type) (u : A) (v : A) (i : I) (j : I) : Partial (~ i \/ i) A =>
  15 |   {| i 0 := u | i 1 /\ j 0 := v |}
         ^------------------------------^

Error: The face(s) in the partial element:
         i 0 \/ (i 1 /\ j 0)
       must cover the face(s) specified in type:
         i 0 \/ i 1

1 error(s), 0 warning(s).
What are you doing?
